[package]
name = "minimal_runtime"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## runtime
log = "0.4"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
axalloc = { git = "https://github.com/Starry-OS/axalloc" }
dtb-walker = "=0.2.0-alpha.3"
spinlock = { path = "../code/dependencies/spinlock", default-features = false }
percpu = { path = "../code/dependencies/percpu", optional = true }
## app
task_management = { path = "../code/task_management", default-features = false, features = ["irq"] }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
trap_handler = { path = "../code/trap_handler", default-features = false, features = ["log", "timer"] }
riscv = "0.11"
crate_interface = "0.1.3"

[profile.release]
debug = true

[features]
smp = [ "spinlock/smp", "task_management/smp", "trap_handler/smp", "percpu" ]
preempt = [ "spinlock/preempt", "task_management/preempt", "trap_handler/preempt", "percpu?/preempt" ]
default = [ "preempt" ]